- ADODB was update to 496
- P4A_TABLE_THUMB_HEIGHT constant was added to configure the height of images within tables
- P4A_Tab_Pane::addPage() method now returns the added page
- a bug with unformatted P4A_Fields with type set to "select" or "multiselect" or "radio" was fixed
- P4A_Standard_Toolbar's buttons are now enabled if the mask's data source is empty

2.1.7
- colorpicker javascript and html was rewritten
- jQuery was updated to 1.2.1
- jQuery::dimension was updated to 1.1.2
- P4A_DB::getNativeError() method was added
- P4A_DB_Navigator's recursor is now optional, thus you can use it also for flat tables

2.1.6
- jQuery was updated to 1.1.4
- double session (used to ovoid multiple scan of objects directories) was removed
- session start was moved into the p4a::singleton() method
- P4A_ENABLE_AUTO_INCLUSION constant was added (default true), if false disabled automatic application files inclusion thus you'll have to manually include every php file
- jqModal was updated to 2007.07.30 +r11
- when an AJAX request fails now we reload the page instead of printing an error
- a bug with P4A_Table was fixed (empty descriptions on columns with external sources)
- Malay translation was added (thanks to Eugene Teo)
- P4A_Field_loadSelectByArray helper was added
- jQuery::autocomplete was added
- P4A_Field::getAsText() now supports autocomplete feature if a P4A_DB_Source is provided with the $fiels->setSource($db_source) method
- various bugfixes

2.1.5
- Hungarian translation was added (thanks to Sándor Csaba)
- jQuery::dimension plugin was updated to 1.0.1
- tooltips frontend implementation (the jQuery part) was rewritten
- tooltips css was improved for Internet Explorer

2.1.4
- P4A_Field::setType('color') was added with nice color picker plugin (fabrtastic) from jQuery
- a bug with file upload error trapping was solved
- FCKEditor was updated to 2.4.3
- jQuery was updated to 1.1.3.1
- jqModal was updated to 2007.07.30 +r10